--- a/etcd-ip-watchdog.yaml
+++ b/etcd-ip-watchdog.yaml
@@ -1,4 +1,4 @@
 ---
-floating_ip: 10.4.0.5/24
-interface: vlan3
-etcd_endpoint: http://127.0.0.1:4001
+:etcd_endpoint: http://127.0.0.1:4001
+:vip: 172.17.1.5/24
+:interface: eth0
