--- a/etcd-ip-watchdog.yaml
+++ b/etcd-ip-watchdog.yaml
@@ -1,4 +1,6 @@
 ---
-:etcd_endpoint: http://127.0.0.1:4001
-:vip: 172.17.1.5/24
-:interface: eth0
+:parameters:
+  :etcd_endpoint: http://172.17.1.5:4001
+  :vip: 172.17.1.5
+  :mask: 255.255.255.0
+  :interface: eth0
