--- a/etcd-ip-watchdog.yaml
+++ b/etcd-ip-watchdog.yaml
@@ -1,6 +1,7 @@
 ---
+:debug: false
 :parameters:
   :etcd_endpoint: http://172.17.1.5:4001
-  :vip: 172.17.1.5
+  :vip: 192.168.7.5
   :mask: 255.255.255.0
   :interface: eth0
