--- a/etcd-watchdog.yaml
+++ b/etcd-watchdog.yaml
@@ -1,6 +1,7 @@
 ---
 :debug: false
 :parameters:
+  :etcd_endpoint: http://172.17.1.62:4001
   :vip: 172.17.1.5
   :mask: 255.255.255.0
   :interface: eth0
